# aitsc-wp

./: .gitignore  .htaccess  ACCESSIBILITY_VERIFICATION.md  AITSC_THEME_IMPLEMENTATION_REPORT.md  ARIA_LABELS_IMPLEMENTATION_REPORT.md  CRITICAL-STATUS-UPDATE.md  DEV-SITE-ISOLATED.md  DOCUMENTATION-COMPLETION-SUMMARY.md  GP-ACTIVATION-QUICK-REF.md  GP-ELEMENTS-ARCHITECTURE.md  GP-PREMIUM-SETUP.md  IMPLEMENTATION_INDEX.md  Key-Lifetime-Generatepress-Premium-pvyogm.rtf  MIGRATION-COMPLETE-PHASES-00-08.md  MIGRATION-PROGRESS.md  MIGRATION_GUIDE.md  PHASE-A1-COMPLETION.txt  PHASE-COMPLETE-260104.txt  PHASE1_IMPLEMENTATION_COMPLETE.md  PHASE_IMPLEMENTATION_REPORT.md  README.md  SETUP-COMPLETE.md  SETUP-GUIDE.md  SETUP-OPTIONS.md  STATUS.md  VERIFICATION-REPORT.md  VERIFICATION-SUMMARY.txt  WORLDQUANT-CLEANUP-COMPLETE.md  WORLDQUANT-CLEANUP-STATUS.md  activate-child-now.php  activate-theme.php  database.sql  get-solution-pages.php  gp-setup-guide.php  page_source.html  page_source_v10.html  page_source_v11.html  page_source_v12.html  page_source_v14.html  page_source_v15.html  (+20 more)
ATISC CONTENT/AITSC 2/V53/: CMakeLists.txt  files.md  fix_images.py  hardware-specification.md  main.c  partitions_large_app.csv  pico_sdk_import.cmake  platform.local.txt  platformio_optimization.ini  transmitter.c  unified-pcb-design-brief.md
ATISC CONTENT/AITSC 2/V53/DisplayV9/: DisplayV9.ino  bus4x4logo.c  touch.h  ui.c  ui.h  ui_InfoScreen.c  ui_Screen1.c  ui_events.c  ui_events.h  ui_font_Font1.c  ui_font_Font2.c  ui_helpers.c  ui_img_194055532.c  ui_img_buk_icon_png.c  ui_img_door_icon_png.c  (+3 more)
(+619 files in other folders)
